2010-01-27  Dominik Röttsches  <dominik.roettsches@access-company.com>

Reviewed by Xan Lopez.

        [Gtk] For removing ICU, implement IDN support by means of libidn
        https://bugs.webkit.org/show_bug.cgi?id=31470

        In order to avoid a new dependency,
        IDN support now based on GLib for the GLib unicode backend.

        * platform/KURL.cpp:
        (WebCore::appendEncodedHostname):

Canonical link: https://commits.webkit.org/45323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53940 268f45cc-cd09-0410-ab3c-d52691b4dbfc